[package]
name = "embedded-fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "embedded_fonts"
path = "src/lib.rs"

[[bin]]
name = "convert-bdf"
path = "src/bin/main.rs"
required-features = ["build-binary"]


[dependencies]
embedded-graphics = "0.7.1"
# for binary
bdf-parser = {optional=true, version= "0.1.0" }
# for binary
clap = {optional=true, version = "3.0.0-beta.2", features = [ "derive" ] }

[dev-dependencies]
embedded-graphics-simulator = "0.3.0"

[features]
build-binary = ["bdf-parser", "clap"]