[package]
name = "convert-bdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-fonts = {path = "../../"}

embedded-graphics = "0.7.1"
bdf-parser = { version= "0.1.0" }
clap = { version = "3.0.0-beta.2", features = [ "derive" ] }

postcard = {version="*"}

